// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test of GifApp.js should be a component snapshot 1`] = `
<div>
  <h2>
    GifApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;

exports[`Test of GifApp.js should be show a category list 1`] = `
<div>
  <h2>
    GifApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Developer"
      key="Developer"
    />
    <GifGrid
      category="Happy"
      key="Happy"
    />
  </ol>
</div>
`;
